[package]
name = "holidayapi-cli"
version = "0.1.0"
edition = "2021"
description = "A simple command line interface to query Holiday API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holidayapi_rust = "0.1.0"
confy = "0.5.0"
serde = "1.0.145"
anyhow = "1.0.65"
clap = { version = "4.0.2", features = ["derive"] }
