[package]
name = "holidayapi-cli"
version = "0.1.0"
edition = "2021"
description = "A simple command line interface to query Holiday API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holidayapi_rust = "0.1.6"
confy = "0.5.0"
serde = "1.0.145"
clap = { version = "4.0.5", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
